src/objects/E2_Timeline_Milestone__c.object
<CustomObject>
    <fields>
        <fullName>E2_Milestone_Library__c</fullName>
        <label>Milestone Library</label>
        <referenceTo>E2_Milestone_Library__c</referenceTo>
        <relationshipLabel>Timeline Milestones</relationshipLabel>
        <relationshipName>Timeline_Milestone</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is_Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone1__c</fullName>
        <label>Milestone 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone2__c</fullName>
        <label>Milestone 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Timeline Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TM-{00000}</displayFormat>
        <label>Timeline_Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timeline Milestone</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>